--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,7 @@
-alembic==1.8.1
-fastapi==0.109.0
-fastapi_amis_admin==0.5.0
-fastapi_mail==1.2.6
-passlib==1.7.4
-pycryptodome==3.17
-pydantic==2.5.2
-PyJWT==2.8.0
-pyotp==2.6.0
-python-dotenv==1.0.0
-SQLAlchemy==2.0.21
-uvicorn==0.23.2
-psycopg2-binary==2.9.8
-requests==2.31.0
-boto3==1.26.115
+fastapi[all]
+sqlalchemy[all]
+pydantic 
+fastapi-jwt-auth 
+pydantic-settings
+python-jose[cryptography]
+passlib[bcrypt]
