--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi[all]
 sqlalchemy[all]
-pydantic 
+pydantic==1.10.9
 fastapi-jwt-auth 
 pydantic-settings
 python-jose[cryptography]
@@ -8,3 +8,4 @@ passlib[bcrypt]
 alembic==1.8.1
 fastapi_amis_admin==0.5.0
 greenlet==3.2.4
+requests==2.31.0
