--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-fastapi[all]
-sqlalchemy[all]
-pydantic==1.10.9
-fastapi-jwt-auth 
-pydantic-settings
+fastapi
+uvicorn[standard]
+sqlalchemy
+alembic
+psycopg2-binary
 python-jose[cryptography]
 passlib[bcrypt]
-alembic==1.8.1
-fastapi_amis_admin==0.5.0
-greenlet==3.2.4
-requests==2.31.0
+pydantic
+python-dotenv
+gunicorn
+fastapi_amis_admin
+greenlet
+requests
